--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 <p class="text">PICK PLAYER 1’S MARK</p>
                 <!-- Rounded switch -->
                 <label id="player-one-marker" class="switch">
-                    <input class="switch-input" type="checkbox" />
+                    <input data-mode="Marker Switcher" class="switch-input" type="checkbox" />
                     <span class="switch-label" data-on="On" data-off="Off"></span>
                     <span class="switch-handle"></span>
                 </label>
@@ -34,10 +34,10 @@
         </div>
 
 
-        <button id="new-game-cpu" class="button button-1 button-primary">
+        <button id="new-game-cpu" data-mode="vsCpu" class="button button-1 button-primary">
             New Game (vs CPU)
         </button>
-        <button id="new-game-player" class="button button-2 button-primary">
+        <button id="new-game-player" data-mode="vsPlayer" class="button button-2 button-primary">
             New Game (vs Player)
         </button>
     </section>
@@ -51,33 +51,39 @@
                     <img src="/src/images/icon-o.svg" alt="0">
                 </div>
                 <div id="turn-display">
-                    <svg class="hidden x-turn-display" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid" width="75" height="75" width="64">
+                    <svg class="hidden x-turn-display" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid" width="75"
+                        height="75" width="64">
                         <path
                             d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z"
                             fill="#A8BFC9" fill-rule="evenodd" />
                     </svg>
-                    <svg class="hidden o-turn-display" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid" width="75" height="75" width="64"><path d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z" fill="rgb(168, 191, 201)"/></svg>
+                    <svg class="hidden o-turn-display" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid" width="75"
+                        height="75" width="64">
+                        <path
+                            d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            fill="rgb(168, 191, 201)" />
+                    </svg>
                     <p id="turn-text">
                         Turn
                     </p>
                 </div>
-                <div >
-                    <button  id="reset" class="button button-3 button-primary">
+                <div>
+                    <button id="reset" class="button button-3 button-primary">
                         <img id="reset-icon" src="/src/images/icon-restart.svg" alt="">
                     </button>
                 </div>
             </div>
             <div class="row row-1">
-                <div data-col="0"  data-row="0" class="cell col-cell-1 empty" id="cell-0"></div>
-                <div data-col="1"  data-row="0" class="cell col-cell-2 empty" id="cell-1"></div>
-                <div data-col="2"  data-row="0" class="cell col-cell-3 empty" id="cell-2"></div>
+                <div data-col="0" data-row="0" class="cell col-cell-1 empty" id="cell-0"></div>
+                <div data-col="1" data-row="0" class="cell col-cell-2 empty" id="cell-1"></div>
+                <div data-col="2" data-row="0" class="cell col-cell-3 empty" id="cell-2"></div>
             </div>
-            <div class="row row-2" >
+            <div class="row row-2">
                 <div data-col="0" data-row="1" class="cell col-cell-1 empty" id="cell-3"></div>
                 <div data-col="1" data-row="1" class="cell col-cell-2 empty" id="cell-4"></div>
                 <div data-col="2" data-row="1" class="cell col-cell-4 empty" id="cell-5"></div>
             </div>
-            <div class="row row-3" >
+            <div class="row row-3">
                 <div data-col="0" data-row="2" class="cell col-cell-1 empty" id="cell-6"></div>
                 <div data-col="1" data-row="2" class="cell col-cell-2 empty" id="cell-7"></div>
                 <div data-col="2" data-row="2" class="cell col-cell-3 empty" id="cell-8"></div>
