--- a/src/index.html
+++ b/src/index.html
@@ -51,14 +51,14 @@
                     <img src="/src/images/icon-o.svg" alt="0">
                 </div>
                 <div id="turn-display">
-                    <svg class="hidden x-turn-display" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid" width="75"
-                        height="75" width="64">
+                    <svg class="shrink x-turn-display turn-icon" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid"
+                        width="75" height="75" width="64">
                         <path
                             d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z"
                             fill="#A8BFC9" fill-rule="evenodd" />
                     </svg>
-                    <svg class="hidden o-turn-display" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid" width="75"
-                        height="75" width="64">
+                    <svg class="shrink o-turn-display turn-icon" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid"
+                        width="75" height="75" width="64">
                         <path
                             d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
                             fill="rgb(168, 191, 201)" />
@@ -74,23 +74,23 @@
                 </div>
             </div>
             <div class="row row-1">
-                <div data-cell="1" data-row="0" class="cell col-cell-1 empty" id="cell-0"></div>
-                <div data-cell="2" data-row="0" class="cell col-cell-2 empty" id="cell-1"></div>
-                <div data-cell="3" data-row="0" class="cell col-cell-3 empty" id="cell-2"></div>
+                <div data-cell="0" data-row="0" class="cell col-cell-1 empty" id="cell-0"></div>
+                <div data-cell="1" data-row="0" class="cell col-cell-2 empty" id="cell-1"></div>
+                <div data-cell="2" data-row="0" class="cell col-cell-3 empty" id="cell-2"></div>
             </div>
             <div class="row row-2">
-                <div data-cell="4" data-row="1" class="cell col-cell-1 empty" id="cell-3"></div>
-                <div data-cell="5" data-row="1" class="cell col-cell-2 empty" id="cell-4"></div>
-                <div data-cell="6" data-row="1" class="cell col-cell-4 empty" id="cell-5"></div>
+                <div data-cell="3" data-row="1" class="cell col-cell-1 empty" id="cell-3"></div>
+                <div data-cell="4" data-row="1" class="cell col-cell-2 empty" id="cell-4"></div>
+                <div data-cell="5" data-row="1" class="cell col-cell-4 empty" id="cell-5"></div>
             </div>
             <div class="row row-3">
-                <div data-cell="7" data-row="2" class="cell col-cell-1 empty" id="cell-6"></div>
-                <div data-cell="8" data-row="2" class="cell col-cell-2 empty" id="cell-7"></div>
-                <div data-cell="9" data-row="2" class="cell col-cell-3 empty" id="cell-8"></div>
+                <div data-cell="6" data-row="2" class="cell col-cell-1 empty" id="cell-6"></div>
+                <div data-cell="7" data-row="2" class="cell col-cell-2 empty" id="cell-7"></div>
+                <div data-cell="8" data-row="2" class="cell col-cell-3 empty" id="cell-8"></div>
             </div>
             <div id="bottom-display">
                 <div id="p1-wins">
-                    <p id="p1-wins-text" class="top-text">(P1)</p>
+                    <p id="p1-wins-text" class="top-text">(P1) </p>
                     <p id="p1-turns-count" class="bottom-text"><strong>0</strong></p>
                 </div>
                 <div id="ties">
@@ -98,7 +98,7 @@
                     <p id="ties-count" class="bottom-text"><strong>0</strong></p>
                 </div>
                 <div id="p2-wins">
-                    <p id="p2-wins-text" class="top-text">(P2)</p>
+                    <p id="p2-wins-text" class="top-text">(P2) </p>
                     <p id="p2-turns-count" class="bottom-text"><strong>0</strong></p>
                 </div>
             </div>
