messing around with Dmitry

--- a/src/index.html
+++ b/src/index.html
@@ -74,19 +74,19 @@
                 </div>
             </div>
             <div class="row row-1">
-                <div data-cell="0" data-row="0" class="cell col-cell-1 empty" id="cell-0"></div>
-                <div data-cell="1" data-row="0" class="cell col-cell-2 empty" id="cell-1"></div>
-                <div data-cell="2" data-row="0" class="cell col-cell-3 empty" id="cell-2"></div>
+                <div data-cell="0" data-row="0" data-col="0" class="cell col-cell-1 empty" id="cell-0"></div>
+                <div data-cell="1" data-row="0" data-col="1" class="cell col-cell-2 empty" id="cell-1"></div>
+                <div data-cell="2" data-row="0" data-col="2" class="cell col-cell-3 empty" id="cell-2"></div>
             </div>
             <div class="row row-2">
-                <div data-cell="3" data-row="1" class="cell col-cell-1 empty" id="cell-3"></div>
-                <div data-cell="4" data-row="1" class="cell col-cell-2 empty" id="cell-4"></div>
-                <div data-cell="5" data-row="1" class="cell col-cell-4 empty" id="cell-5"></div>
+                <div data-cell="3" data-row="1" data-col="0" class="cell col-cell-1 empty" id="cell-3"></div>
+                <div data-cell="4" data-row="1" data-col="1" class="cell col-cell-2 empty" id="cell-4"></div>
+                <div data-cell="5" data-row="1" data-col="2" class="cell col-cell-4 empty" id="cell-5"></div>
             </div>
             <div class="row row-3">
-                <div data-cell="6" data-row="2" class="cell col-cell-1 empty" id="cell-6"></div>
-                <div data-cell="7" data-row="2" class="cell col-cell-2 empty" id="cell-7"></div>
-                <div data-cell="8" data-row="2" class="cell col-cell-3 empty" id="cell-8"></div>
+                <div data-cell="6" data-row="2" data-col="0" class="cell col-cell-1 empty" id="cell-6"></div>
+                <div data-cell="7" data-row="2" data-col="1" class="cell col-cell-2 empty" id="cell-7"></div>
+                <div data-cell="8" data-row="2" data-col="2" class="cell col-cell-3 empty" id="cell-8"></div>
             </div>
             <div id="bottom-display">
                 <div id="p1-wins">
