added more gameboard functionality, albeit glitchy

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
             <div id="bottom-display">
                 <div id="p1-wins">
                     <p id="p1-wins-text" class="top-text">(P1) </p>
-                    <p id="p1-turns-count" class="bottom-text"><strong>0</strong></p>
+                    <p id="p1-wins-count" class="bottom-text"><strong>0</strong></p>
                 </div>
                 <div id="ties">
                     <p id="ties-text" class="top-text">Ties</p>
@@ -99,7 +99,7 @@
                 </div>
                 <div id="p2-wins">
                     <p id="p2-wins-text" class="top-text">(P2) </p>
-                    <p id="p2-turns-count" class="bottom-text"><strong>0</strong></p>
+                    <p id="p2-wins-count" class="bottom-text"><strong>0</strong></p>
                 </div>
             </div>
         </div>
