--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
         <div id="board">
             <div id="top-display">
                 <div class="top-icons">
-                    <img src="/src/images/icon-x.svg" alt="x">
-                    <img src="/src/images/icon-o.svg" alt="0">
+                    <img src="./images/icon-x.svg" alt="x">
+                    <img src="./images/icon-o.svg" alt="0">
                 </div>
                 <div id="turn-display">
                     <svg class="shrink x-turn-display turn-icon" viewBox="0 0 60 70" preserveAspectRatio="xMidYMid"
