--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
         </div>
 
 
-        <button id="new-game-cpu" data-mode="vsCpu" class="button button-1 button-primary">
+        <!-- <button id="new-game-cpu" data-mode="vsCpu" class="button button-1 button-primary">
             New Game (vs CPU)
-        </button>
+        </button> -->
         <button id="new-game-player" data-mode="vsPlayer" class="button button-2 button-primary">
             New Game (vs Player)
         </button>
